fix: Align dropdown contents

--- a/assets/css/dropdown-w3c.css
+++ b/assets/css/dropdown-w3c.css
@@ -12,6 +12,7 @@
     position: relative;
     display: inline-block;
     margin-left: 900px;
+    text-align: center;
 }
 
 /* Dropdown Content (Hidden by Default) */
